<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProjectSubmissionActivity"
    android:background="@drawable/project_submission_background"
    android:padding="18dp">

    <ImageButton
        android:id="@+id/back_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_arrow_back_24"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="150dp"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="60dp"
        >

        <EditText
            android:id="@+id/first_name_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:inputType="text"
            android:maxLines="1"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/first_name"
            android:padding="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp" />

        <EditText
            android:id="@+id/last_name_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="text"
            android:textStyle="bold"
            android:maxLines="1"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/last_name"
            android:padding="10dp"
            />
    </LinearLayout>



    <EditText
        android:id="@+id/email_address_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/email_address"
        android:textStyle="bold"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:layout_marginBottom="60dp"
        />


    <EditText
        android:id="@+id/project_link_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/project_on_github_link"
        android:textStyle="bold"
        android:inputType="textUri"
        android:padding="10dp"
        android:layout_marginBottom="80dp"
        />



    <Button
        android:id="@+id/submit_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_gravity="center"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:background="@drawable/submit_button_shape2"
        />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>