<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/title_relative_layout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:background="@android:color/black"
        >
        <TextView
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.DialogWindowTitle"
            android:textColor="@android:color/white"
            android:text="@string/leaderBoard"
            android:textAllCaps="true"
            android:layout_marginVertical="10dp"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp" />

        <Button
            android:id="@+id/submit_tab_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/submit"
            android:textColor="@android:color/black"
            android:background="@drawable/submit_button_shape1"
            android:layout_marginVertical="10dp"
            android:layout_marginRight="24dp"
            android:layout_marginEnd="24dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabTextColor="@android:color/darker_gray"
        app:tabSelectedTextColor="@android:color/white"
        app:tabBackground="@android:color/black"
        app:tabIndicatorHeight="5dp"
        app:tabIndicatorColor="@android:color/white"
        >

        <com.google.android.material.tabs.TabItem
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/learning_leaders"
            />
        <com.google.android.material.tabs.TabItem
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/skill_iq_leaders"
            />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        >

    </androidx.viewpager.widget.ViewPager>

</LinearLayout>